# sfml-example

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  sfmltest.cbp
cmake_modules/: FindSFML.cmake
src/: main.cpp
src/App/ColorScale/: ColorScale.cpp  ColorScale.h
src/App/Game/: Game.cpp  Game.h
src/App/GameState/: GameState.h  GameStateSimulation.cpp  GameStateSimulation.h
src/App/Gui/: Fps.cpp  Fps.h
src/App/Map/: Map.cpp  Map.h
src/App/Map/Generator/: HeightMapGenerator.cpp  HeightMapGenerator.h  PopulationMapGenerator.cpp  PopulationMapGenerator.h
src/App/Map/Renderer/: HeightMapRenderer.cpp  HeightMapRenderer.h  MapRenderer.h  PopulationMapRenderer.cpp  PopulationMapRenderer.h
src/App/Map/Simulator/: PopulationMapSimulator.cpp  PopulationMapSimulator.h
src/Helper/: String.h
